# src/routes/product.js
@@ -2,5 +2,5 @@
 const productController = require('../controllers/product/productController');
 
 module.exports = function (router) {
-    router.all('/product/categoryId/:categoryId/page/:page?', productController.categoryProducts);
+    router.all('/product/:productId', productController.productDetail);
 };
